--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./pages/form.css" />
   <link rel="stylesheet" href="./pages/calc.css" />
   <link rel="stylesheet" href="./pages/FAQ.css" />
+  <link rel="stylesheet" href="./pages/timer.css" />
   <title>Domaha</title>
 </head>
 
@@ -156,7 +157,10 @@
 
     </div>
 
-    <h2></h2>
+    <!-- <h2>Timer</h2>
+    <input type="text" name="time" id="time" placeholder="write time in min">
+    <button id="button">Start</button>
+    <div id="timer"></div> -->
     
 
 
@@ -173,6 +177,7 @@
   <script src="./calc.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="./FAQ.js"></script>
+  <script src="./timer.js"></script>
 </body>
 
 </html>
